change des styles, ajoute du formatage au texte, ajoute une directive
change la version (17->18)

met à jour typescript et codelyzer

change les styles

corrige le problème des tirets, ajoute du formatage et des liens

ajoute des règles à codelyzer

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.17",
-    "codelyzer": "~0.0.26",
+    "angular-cli": "1.0.0-beta.18",
+    "codelyzer": "1.0.0-beta.1",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
@@ -40,6 +40,6 @@
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "2.0.2"
+    "typescript": "~2.0.3"
   }
 }
