--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^6.0.46",
     "angular-cli": "1.0.0-beta.18",
     "codelyzer": "1.0.0-beta.3",
+    "jasmine": "^2.5.2",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.7.0",
     "karma": "1.3.0",
