--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@angular/common": "~2.1.1",
     "@angular/compiler": "~2.1.1",
+    "@angular/compiler-cli": "^2.1.2",
     "@angular/core": "~2.1.1",
     "@angular/forms": "~2.1.1",
     "@angular/http": "~2.1.1",
     "@angular/material": "^2.0.0-alpha.9-3",
     "@angular/platform-browser": "^2.1.1",
     "@angular/platform-browser-dynamic": "~2.1.1",
+    "@angular/platform-server": "^2.1.2",
     "@angular/router": "~3.1.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
@@ -30,7 +32,7 @@
   "devDependencies": {
     "@types/jasmine": "^2.5.36",
     "@types/node": "^6.0.46",
-    "angular-cli": "1.0.0-beta.18",
+    "angular-cli": "1.0.0-beta.19-3",
     "codelyzer": "1.0.0-beta.3",
     "jasmine": "^2.5.2",
     "jasmine-core": "2.5.2",
@@ -41,7 +43,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.10",
-    "ts-node": "1.6.0",
+    "ts-node": "1.6.1",
     "tslint": "3.15.1",
     "typescript": "~2.0.6"
   }
