--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,6 +7,7 @@
     "mapRoot": "./",
     "module": "es6",
     "moduleResolution": "node",
+    "noImplicitAny": false,
     "outDir": "../dist/out-tsc",
     "sourceMap": true,
     "target": "es5",
