--- a/src/tsconfig-aot.json
+++ b/src/tsconfig-aot.json
@@ -1,22 +1,28 @@
 {
   "compilerOptions": {
+    "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "lib": ["es6", "dom"],
+    "mapRoot": "./",
     "module": "es2015",
     "moduleResolution": "node",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
+    "outDir": "../aot",
     "removeComments": false,
     "sourceMap": true,
     "suppressImplicitAnyIndexErrors": true,
-    "target": "es5"
+    "target": "es5",
+    "typeRoots": [
+      "../node_modules/@types"
+    ]
   },
-
   "files": [
+    "app/app.module.ts",
     "main.ts"
   ],
-
   "angularCompilerOptions": {
-   "genDir": "../aot",
-   "skipMetadataEmit" : true
- }
+    "genDir": "../aot",
+    "skipMetadataEmit" : true
+  }
 }
