--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "e2e": "protractor"
   },
   "dependencies": {
-    "@angular/common": "~2.1.2",
-    "@angular/compiler": "~2.1.2",
+    "@angular/common": "^2.1.2",
+    "@angular/compiler": "^2.1.2",
     "@angular/compiler-cli": "^2.1.2",
-    "@angular/core": "~2.1.2",
-    "@angular/forms": "~2.1.2",
-    "@angular/http": "~2.1.2",
+    "@angular/core": "^2.1.2",
+    "@angular/forms": "^2.1.2",
+    "@angular/http": "^2.1.2",
     "@angular/material": "^2.0.0-alpha.9-3",
     "@angular/platform-browser": "^2.1.2",
-    "@angular/platform-browser-dynamic": "~2.1.2",
+    "@angular/platform-browser-dynamic": "^2.1.2",
     "@angular/platform-server": "^2.1.2",
     "@angular/router": "~3.1.2",
     "core-js": "^2.4.1",
