--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/router": "~3.1.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "rxjs": "5.0.0-rc.1",
+    "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.6.26"
   },
