--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -14,5 +14,9 @@
     "typeRoots": [
       "../node_modules/@types"
     ]
-  }
+  },
+  "filesGlob": [
+    "**/*.module.ts",
+    "main.ts"
+  ]
 }
