--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -16,9 +16,9 @@
     ]
   },
   "files": [
-    "main.ts"
+    "./main.ts"
   ],
   "filesGlob": [
-    "**/*.module.ts"
+    "./**/*.module.ts"
   ]
 }
