--- a/src/tsconfig-ahead.json
+++ b/src/tsconfig-ahead.json
@@ -8,11 +8,8 @@
     "module": "es2015",
     "moduleResolution": "node",
     "noImplicitAny": false,
-    "outDir": "../aot",
+    "outDir": "../aot2",
     "removeComments": false,
-    "rootDirs": [
-      "../aot"
-    ],
     "sourceMap": true,
     "suppressImplicitAnyIndexErrors": true,
     "target": "es5",
@@ -21,13 +18,13 @@
     ]
   },
   "files": [
-    "./main-ahead.ts"
+    "./main.ts"
   ],
   "filesGlob": [
     "./**/*.module.ts"
   ],
   "angularCompilerOptions": {
-    "genDir": "../aot",
+    "genDir": "../aot1",
     "skipMetadataEmit" : true
   }
 }
