--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "^2.1.2",
     "@angular/platform-server": "^2.1.2",
     "@angular/router": "~3.1.2",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^2.2.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "5.0.0-beta.12",
