--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@angular/core": "^2.1.2",
     "@angular/forms": "^2.1.2",
     "@angular/http": "^2.1.2",
-    "@angular/material": "^2.0.0-alpha.9-3",
+    "@angular/material": "^2.0.0-alpha.10",
     "@angular/platform-browser": "^2.1.2",
     "@angular/platform-browser-dynamic": "^2.1.2",
     "@angular/platform-server": "^2.1.2",
@@ -47,6 +47,6 @@
     "protractor": "4.0.10",
     "ts-node": "1.7.0",
     "tslint": "3.15.1",
-    "typescript": "^2.0.9"
+    "typescript": "^2.0.8"
   }
 }
