--- a/package.json
+++ b/package.json
@@ -12,41 +12,47 @@
     "e2e": "protractor"
   },
   "dependencies": {
-    "@angular/common": "^2.1.2",
-    "@angular/compiler": "^2.1.2",
-    "@angular/compiler-cli": "^2.1.2",
-    "@angular/core": "^2.1.2",
-    "@angular/forms": "^2.1.2",
-    "@angular/http": "^2.1.2",
+    "@angular/common": "^2.2.0",
+    "@angular/compiler": "^2.2.0",
+    "@angular/compiler-cli": "^2.2.0",
+    "@angular/core": "^2.2.0",
+    "@angular/forms": "^2.2.0",
+    "@angular/http": "^2.2.0",
     "@angular/material": "^2.0.0-alpha.10",
-    "@angular/platform-browser": "^2.1.2",
-    "@angular/platform-browser-dynamic": "^2.1.2",
-    "@angular/platform-server": "^2.1.2",
-    "@angular/router": "~3.1.2",
+    "@angular/platform-browser": "^2.2.0",
+    "@angular/platform-browser-dynamic": "^2.2.0",
+    "@angular/platform-server": "^2.2.0",
+    "@angular/router": "^3.2.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.1",
+    "@types/jasmine": "^2.5.38",
+    "@types/node": "^6.0.48",
+    "angular-cli": "^1.0.0-beta.20-4",
+    "codelyzer": "^1.0.0-beta.4",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "protractor": "^4.0.11",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.2",
+    "typescript": "^2.1.1",
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "@types/jasmine": "^2.5.37",
     "@types/node": "^6.0.46",
-    "angular-cli": "1.0.0-beta.19-3",
-    "codelyzer": "1.0.0-beta.3",
+    "angular-cli": "^1.0.0-beta.20-4",
+    "codelyzer": "^1.0.0-beta.3",
     "jasmine": "^2.5.2",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.7.0",
-    "karma": "1.3.0",
+    "jasmine-core": "^2.5.2",
+    "jasmine-spec-reporter": "^2.7.0",
+    "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.10",
-    "ts-node": "1.7.0",
-    "tslint": "3.15.1",
+    "protractor": "^4.0.10",
+    "ts-node": "^1.7.0",
+    "tslint": "^3.15.1",
     "typescript": "^2.0.8"
   }
 }
