Studio fonctionne et enregistre bien la vidéo, sous Chrome uniquement pour l'instant

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -16,9 +16,14 @@
     ]
   },
   "files": [
-    "./main.ts"
+    "./main.ts",
+    "./typings.d.ts"
   ],
   "filesGlob": [
     "./**/*.module.ts"
-  ]
+  ],
+  "angularCompilerOptions": {
+    "genDir": "aot",
+    "skipMetadataEmit" : true
+  }
 }
