--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^2.2.0",
     "@angular/platform-server": "^2.2.0",
     "@angular/router": "^3.2.0",
+    "@angular/upgrade": "^2.2.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.1",
     "@types/jasmine": "^2.5.38",
