--- a/package.json
+++ b/package.json
@@ -12,36 +12,29 @@
     "e2e": "protractor"
   },
   "dependencies": {
-    "@angular/common": "^2.2.0",
-    "@angular/compiler": "^2.2.0",
-    "@angular/compiler-cli": "^2.2.0",
-    "@angular/core": "^2.2.0",
-    "@angular/forms": "^2.2.0",
-    "@angular/http": "^2.2.0",
-    "@angular/material": "^2.0.0-alpha.10",
-    "@angular/platform-browser": "^2.2.0",
-    "@angular/platform-browser-dynamic": "^2.2.0",
-    "@angular/platform-server": "^2.2.0",
-    "@angular/router": "^3.2.0",
-    "@angular/upgrade": "^2.2.0",
+    "@angular/common": "^2.2.1",
+    "@angular/compiler": "^2.2.1",
+    "@angular/compiler-cli": "^2.2.1",
+    "@angular/core": "^2.2.1",
+    "@angular/forms": "^2.2.1",
+    "@angular/http": "^2.2.1",
+    "@angular/material": "2.0.0-alpha.10",
+    "@angular/platform-browser": "^2.2.1",
+    "@angular/platform-browser-dynamic": "^2.2.1",
+    "@angular/platform-server": "^2.2.1",
+    "@angular/router": "^3.2.1",
+    "@angular/upgrade": "^2.2.1",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.1",
-    "@types/jasmine": "^2.5.38",
-    "@types/node": "^6.0.48",
-    "angular-cli": "^1.0.0-beta.20-4",
-    "codelyzer": "^1.0.0-beta.4",
+    "angular-cli": "^1.0.0-beta.21",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "protractor": "^4.0.11",
-    "rxjs": "5.0.0-beta.12",
-    "ts-helpers": "^1.1.2",
-    "typescript": "^2.1.1",
+    "rxjs": "^5.0.0-rc.4",
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "@types/jasmine": "^2.5.37",
     "@types/node": "^6.0.46",
-    "angular-cli": "^1.0.0-beta.20-4",
     "codelyzer": "^1.0.0-beta.3",
     "jasmine": "^2.5.2",
     "jasmine-core": "^2.5.2",
@@ -53,7 +46,7 @@
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "^4.0.10",
     "ts-node": "^1.7.0",
-    "tslint": "^3.15.1",
-    "typescript": "^2.0.8"
+    "tslint": "^3.15.0",
+    "typescript": "^2.2.0-dev.20161120"
   }
 }
