--- a/package.json
+++ b/package.json
@@ -26,23 +26,18 @@
     "@angular/upgrade": "^2.2.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.1",
-    "@types/jasmine": "^2.5.38",
-    "@types/node": "^6.0.48",
-    "angular-cli": "^1.0.0-beta.20-4",
-    "codelyzer": "^1.0.0-beta.4",
+    "angular-cli": "^1.0.0-beta.21",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "protractor": "^4.0.11",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.0.0-rc.4",
     "ts-helpers": "^1.1.2",
-    "typescript": "^2.1.1",
-    "zone.js": "^0.6.26"
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "@types/jasmine": "^2.5.37",
     "@types/node": "^6.0.46",
-    "angular-cli": "^1.0.0-beta.20-4",
-    "codelyzer": "^1.0.0-beta.3",
+    "angular-cli": "^1.0.0-beta.21",
+    "codelyzer": "^2.0.0-beta.1",
     "jasmine": "^2.5.2",
     "jasmine-core": "^2.5.2",
     "jasmine-spec-reporter": "^2.7.0",
@@ -51,9 +46,9 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
-    "protractor": "^4.0.10",
+    "protractor": "^4.0.11",
     "ts-node": "^1.7.0",
-    "tslint": "^3.15.1",
-    "typescript": "^2.0.8"
+    "tslint": "^4.0.2",
+    "typescript": "^2.1.1"
   }
 }
