--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -15,8 +15,10 @@
       "../node_modules/@types"
     ]
   },
+  "files": [
+    "./typings.d.ts"
+  ],
   "include": [
-    "./typings.d.ts",
     "./app/**/*.ts",
     "./main.ts"
   ],
