--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -15,12 +15,10 @@
       "../node_modules/@types"
     ]
   },
-  "files": [
-    "./typings.d.ts"
-  ],
   "include": [
-    "./app/**/*.ts",
-    "./main.ts"
+    "./main.ts",
+    "./typings.d.ts",
+    "./**/*.module.ts"
   ],
   "exclude": [
     "./**/*.spec.ts"
