--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@ngrx/store": "^2.2.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "rxjs": "^5.0.0-rc.4",
+    "rxjs": "^5.0.0-beta.12",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.7.2"
   },
