--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "ng serve",
     "lint": "tslint \"src/**/*.ts\"",
+    "hmr": "ng serve --hmr -e=hmr",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor"
@@ -35,7 +36,7 @@
   "devDependencies": {
     "@types/jasmine": "^2.5.37",
     "@types/node": "^6.0.46",
-    "angular-cli": "^1.0.0-beta.21",
+    "angular-cli": "^1.0.0-beta.22",
     "codelyzer": "^2.0.0-beta.1",
     "jasmine": "^2.5.2",
     "jasmine-core": "^2.5.2",
