fixe la version d'angular en raison d'un bug de Universal

--- a/package.json
+++ b/package.json
@@ -32,18 +32,18 @@
     "debug": "node --debug-brk dist/server/index.js"
   },
   "dependencies": {
-    "@angular/common": "^2.2.1",
-    "@angular/compiler": "^2.2.1",
-    "@angular/compiler-cli": "^2.2.1",
-    "@angular/core": "^2.2.1",
-    "@angular/forms": "^2.2.1",
-    "@angular/http": "^2.2.1",
+    "@angular/common": "2.1.0",
+    "@angular/compiler": "2.1.0",
+    "@angular/compiler-cli": "2.1.0",
+    "@angular/core": "2.1.0",
+    "@angular/forms": "2.1.0",
+    "@angular/http": "2.1.0",
     "@angular/material": "2.0.0-alpha.10",
-    "@angular/platform-browser": "^2.2.1",
-    "@angular/platform-browser-dynamic": "^2.2.1",
-    "@angular/platform-server": "^2.2.1",
-    "@angular/router": "^3.2.1",
-    "@angular/upgrade": "^2.2.1",
+    "@angular/platform-browser": "2.1.0",
+    "@angular/platform-browser-dynamic": "2.1.0",
+    "@angular/platform-server": "2.1.0",
+    "@angular/router": "3.1.0",
+    "@angular/upgrade": "2.1.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.1",
     "angular2-express-engine": "~2.1.0-rc.1",
@@ -77,7 +77,7 @@
     "@types/serve-static": "^1.7.27",
     "@types/webfontloader": "^1.6.27",
 
-    "@ngtools/webpack": "^1.1.6",
+    "@ngtools/webpack": "^1.0.0",
     "@types/jasmine": "^2.5.37",
     "@types/node": "^6.0.46",
 
