--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
     "e2e": "protractor"
   },
   "dependencies": {
-    "@angular/common": "^2.2.1",
-    "@angular/compiler": "^2.2.1",
-    "@angular/compiler-cli": "^2.2.1",
-    "@angular/core": "^2.2.1",
-    "@angular/forms": "^2.2.1",
-    "@angular/http": "^2.2.1",
+    "@angular/common": "2.2.1",
+    "@angular/compiler": "2.2.1",
+    "@angular/compiler-cli": "2.2.1",
+    "@angular/core": "2.2.1",
+    "@angular/forms": "2.2.1",
+    "@angular/http": "2.2.1",
     "@angular/material": "2.0.0-alpha.10",
-    "@angular/platform-browser": "^2.2.1",
-    "@angular/platform-browser-dynamic": "^2.2.1",
-    "@angular/platform-server": "^2.2.1",
-    "@angular/router": "^3.2.1",
-    "@angular/upgrade": "^2.2.1",
+    "@angular/platform-browser": "2.2.1",
+    "@angular/platform-browser-dynamic": "2.2.1",
+    "@angular/platform-server": "2.2.1",
+    "@angular/router": "3.2.1",
+    "@angular/upgrade": "2.2.1",
     "@ngrx/core": "^1.2.0",
-    "@ngrx/store": "^2.2.1",
+    "@ngrx/store": "^2.2.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "rxjs": "^5.0.0-beta.12",
+    "rxjs": "^5.0.0",
     "ts-helpers": "^1.1.2",
-    "zone.js": "^0.6.26"
+    "zone.js": "^0.6"
   },
   "devDependencies": {
     "@types/jasmine": "^2.5.37",
     "@types/node": "^6.0.46",
-    "angular-cli": "^1.0.0-beta.21",
-    "codelyzer": "^2.0.0-beta.1",
+    "angular-cli": "1.0.0-beta.21",
+    "codelyzer": "^2.0.0-beta.3",
     "jasmine": "^2.5.2",
     "jasmine-core": "^2.5.2",
     "jasmine-spec-reporter": "^2.7.0",
@@ -48,6 +48,6 @@
     "protractor": "^4.0.11",
     "ts-node": "^1.7.0",
     "tslint": "^4.0.2",
-    "typescript": "^2.1.1"
+    "typescript": "~2.0.10"
   }
 }
