--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@types/jasmine": "^2.5.37",
     "@types/node": "^6.0.46",
-    "angular-cli": "^1.0.0-beta.21",
+    "angular-cli": "^1.0.0-beta.22-1",
     "codelyzer": "^2.0.0-beta.1",
     "jasmine": "^2.5.2",
     "jasmine-core": "^2.5.2",
